# chatbot-gradio

./: Dockerfile  README.md  pyproject.toml
app/: app.py  chat.py  config.py  server.py
